--- a/minutes/25.07.2016.md
+++ b/minutes/25.07.2016.md
@@ -1,1 +1,66 @@
-Meeting Notes from 25 July 2016
+# Meeting Notes from 25 July 2016
+
+## Next Meeting
+* 29 August 2016 11am-1pm EDT (5pm-7pm CET)
+* Agenda: Each model proposer will walk through their example beginning to end (see Action Items)
+
+## Action Items
+* For everyone who has [proposed a model](https://github.com/distributed-text-services/API/wiki), take it from beginning to end following [Jefferey's example](http://lombardpress.org/2016/06/12/DTS-modeling-proposal/) (and at least his use case, although okay to include others) showing example API requests and responses
+  
+## Detailed Notes on Discussion Points
+
+We need to resolve:
+* What are our APIs going to be?
+* How are we going to expose those with various ontologies and systems?
+
+APIS under consideration:
+* Navigation/Discovery API
+    * Without any knowledge can start at the top and navigate down to find out what a system has, what it can do for you, and what things you can find
+    * Organized hierarchically to collections
+      *  But still need discussion on how collections should be organized
+        * Hugh’s opinion: should not be one system of organization that is mandated because it might vary based upon collection
+        * Jonathan asks, also Metadata API? What kind of Xs exist in this repository?
+        * Bridget/Hugh think this is the function of the Navigation/Discovery API -- i.e. Metadata is primary thing that gets delivered in the discovery API
+          * Would be good to identify the base set of properties a DTS system should expose
+
+
+* Citation API
+  * Given an identifier for a citation can resolve to text
+    * Might be a CTS URN
+    * Might be any number of different types of citation
+    * Going back and forth on whether there should be a DTS URN system that we mandate or not
+  * Q: “Resolve”: is it metadata, text or both? 
+    * Hugh thinks answer is “both”. You should be able to get metadata, text, set of relationships
+    * Thibault thinks one of the most useful things in the CTS GetPassagePlus API was the ability to navigate via next/prev, parent child and thinks this should be part of the CitationAPI (navigating the tree of the text)
+    * Bridgetsays this is the “traverse items in a collection” part of her proposal
+    * Jonathan thinks this needs to be fleshed out further, with explicit info on how it works with different types of documents , thinks we need hierarchical scheme for identifiers that takes this into account (so that if you have john 3.16 you can look at the identifier and see that john 3 contains something called john 3 16)
+    * Thibault says it should up to the publisher to decide and advertise the hierarchy of its text, it should support CTS urns which include this level of identification in the identifiers, but it shouldn’t require it
+    * Hugh’s concern: the thing that is broken with CTS is the “canonical” part because this works for Gospel of John, Homer’s Odyssey, but this does not apply for papyri, inscriptions because there is no guarantee of equivalence across instances of one of these
+    * Frederik sees two ways to add this level of abstraction: one would be be as part of an exemplar -- another would be to make it part of the addressing scheme
+    * Jonathan says let's support (1) hierarchy and (2) milestones that can be used to identify parts of the hierarchy, while allowing resource creators to use as much or as little hierarchy as they need, and where they need it
+    * Hugh: Mapping across editions should be possible, but it’s done via additional properties on the citation
+    * needs further work before we can get closer to agreement on its scope and how it might work
+
+
+
+* Ontologies under consideration
+  * Mostly relate to discovery API
+  * Would provide mechanism by which you can navigate the discovery API
+  * Namespace/Naming Authority
+    * Jonathan Would rather have things like “greekLit” be properties of the metadata Thinks like namespace are not unambiguous and can’t always be assigned 
+    * Hugh thinks it would have been better if we didn’t use greekLit/latinLit but still thinks there is value to having a naming authority in the identifier
+    * Thibault: ARK has a nice namespace system  ark:originalProviderName:identifierResource and it was adopted by a lot of institutions
+
+  * Re identifying of the “type” of object in an identifier 
+    * Jonathan suggests e.g. urn:dts:[provider]:[itemtype] urn:dts:[provider]:manuscript
+    * Not broad agreement on this yet
+
+  * Re images:
+    * Jeffrey suggests via metadata resource:isOnCanvas=>IIIF:canvasId
+    * Bridget/Thibault IIIF API is a framework for working with images which we don’t need to redo
+    * Images dropped for content serving (except if Jonathan does not agree with IIIF)
+
+For next steps, we need to:
+  * talk about what/if a DTS naming scheme would look like
+  * Sketch out in more detail what a Citation API is going to do
+  * Decide whether to use collections or embedded metadata to model things like ontologies (does a collection have an identity - Jonathan will work this up further as a question)
