--- a/minutes/14.10.2016.md
+++ b/minutes/14.10.2016.md
@@ -36,7 +36,7 @@
 * ids may not be resolvable
 * ids are not api locations
 
-**Document navigation:**
+**Intra-Document navigation/rendering:**
 * Jonathan: we previously agreed on using media type to structure docs, but usage is relevant too
 * Hugh: 
 * Jonathan: do we want to query docs with different mediatypes, or will those be different things?
